// SPDX-License-Identifier: MIT

syntax = "proto2";

package proto;
option go_package = ".;proto";

message pagemap_head {
	required uint32 pages_id	= 1;
}

message pagemap_entry {
	required uint64 vaddr		= 1;
	required uint32 nr_pages	= 2;
	optional bool	in_parent	= 3;
	optional uint32	flags		= 4;
}
